--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   "author": {
     "name": "Ale Z.",
     "url": "https://github.com/alebcj"
-     },
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alebcj/cs2-gsi-z.git"
+    "url": "git+https://github.com/alebcj/cs2-gsi-z.git"
   },
   "license": "MIT",
   "devDependencies": {
@@ -41,7 +41,7 @@
     "vitest": "^3.1.2",
     "ws": "^8.18.1"
   },
-  "dependencies": {    
+  "dependencies": {
     "chalk": "^5.4.1"
   }
 }
