Converted package to ts, and rewrote models to ts

--- a/package.json
+++ b/package.json
@@ -2,15 +2,24 @@
   "name": "cs2-gsi-z",
   "version": "1.0.0",
   "description": "A modular, event-driven Game State Integration (GSI) handler for Counter-Strike 2 built with Node.js.",
-  "main": "./src/index.js",
   "exports": {
-    ".": "./src/index.js"
+    "types": "./src/index.ts",
+    "import": "./dist/esm/index.js",
+    "require": "./dist/cjs/index.cjs"
   },
   "type": "module",
   "scripts": {
-    "test": "vitest",
-    "lint": "eslint ./src --ext .js",
-    "format": "prettier --write ./src"
+    "build": "concurrently \"bun run build-browser\" \"bun run build-node\" \"bun run build-bun\" \"bun run build:declaration\"",
+    "build-browser": "bun build ./src/index.ts --outdir ./dist/browser --target browser",
+    "build-node": "bun build ./src/index.ts --outdir ./dist/cjs --target node --packages external --format cjs",
+    "build-bun": "bun build ./src/index.ts --outdir ./dist/esm --target bun --packages external",
+    "dev": "concurrently \"bun run dev-browser\" \"bun run dev-node\" \"bun run dev-bun\" \"bun run dev:declaration\"",
+    "dev-browser": "bun build ./src/index.ts --outdir ./dist/browser --target browser --watch",
+    "dev-node": "bun build ./src/index.ts --outdir ./dist/cjs --target node --packages external --format cjs --watch",
+    "dev-bun": "bun build ./src/index.ts --outdir ./dist/esm --target bun --packages external --watch",
+    "build:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --outFile ./dist/ts/index.js",
+    "dev:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --outFile ./dist/ts/index.js --watch",
+    "demo": "concurrently \"bun run dev-browser\" \"bun ./demo/index.ts\""
   },
   "keywords": [
     "cs2",
@@ -30,6 +39,9 @@
     "name": "Ale Z.",
     "url": "https://github.com/alebcj"
   },
+  "contributors": [
+    "Albin Hedwall <albin.hedwall@gmail.com> (https://github.com/wavpro)"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alebcj/cs2-gsi-z.git"
@@ -39,7 +51,8 @@
     "eslint": "^9.25.1",
     "prettier": "^3.5.3",
     "vitest": "^3.1.2",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "concurrently": "^9.2.1"
   },
   "dependencies": {
     "chalk": "^5.4.1"
