--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "osby-gaming-cs2-gsi",
-  "version": "0.2.0",
-  "description": "A modular, event-driven Game State Integration (GSI) handler for Counter-Strike 2 built with Node.js.",
+  "name": "cs2-gsi-z",
+  "version": "2.0.0",
+  "description": "A modern, modular, and event-driven Game State Integration (GSI) handler for **Counter-Strike 2**, built with bun.sh and intercompatible with Node.js.",
   "exports": {
     "types": "./src/index.ts",
     "import": "./dist/esm/index.js",
@@ -17,8 +17,8 @@
     "dev-browser": "bun build ./src/index.ts --outdir ./dist/browser --target browser --watch",
     "dev-node": "bun build ./src/index.ts --outdir ./dist/cjs --target node --packages external --format cjs --watch",
     "dev-bun": "bun build ./src/index.ts --outdir ./dist/esm --target bun --packages external --watch",
-    "build:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --esModuleInterop --target es2022 --moduleResolution nodenext --module NodeNext --outFile ./dist/ts/index.js",
-    "dev:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --esModuleInterop --target es2022 --moduleResolution nodenext --module NodeNext --outFile ./dist/ts/index.js --watch",
+    "build:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --esModuleInterop --target es2022 --moduleResolution bundler --module es2022 --outFile ./dist/ts/index.js",
+    "dev:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --esModuleInterop --target es2022 --moduleResolution bundler --module es2022 --outFile ./dist/ts/index.js --watch",
     "demo": "bun ./demo/index.ts"
   },
   "keywords": [
