--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "2.0.0",
   "description": "A modern, modular, and event-driven Game State Integration (GSI) handler for **Counter-Strike 2**, built with bun.sh and intercompatible with Node.js.",
   "exports": {
-    "types": "./src/index.ts",
-    "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.cjs"
+    ".": {
+      "import": {
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "default": "./dist/cjs/index.js"
+      },
+      "types": {
+        "default": "./src/index.ts"
+      }
+    }
   },
   "type": "module",
   "scripts": {
-    "build": "concurrently \"bun run build-browser\" \"bun run build-node\" \"bun run build-bun\" \"bun run build:declaration\"",
-    "build-browser": "bun build ./src/index.ts --outdir ./dist/browser --target browser",
-    "build-node": "bun build ./src/index.ts --outdir ./dist/cjs --target node --packages external --format cjs",
-    "build-bun": "bun build ./src/index.ts --outdir ./dist/esm --target bun --packages external",
-    "dev": "concurrently \"bun run dev-browser\" \"bun run dev-node\" \"bun run dev-bun\" \"bun run dev:declaration\"",
-    "dev-browser": "bun build ./src/index.ts --outdir ./dist/browser --target browser --watch",
-    "dev-node": "bun build ./src/index.ts --outdir ./dist/cjs --target node --packages external --format cjs --watch",
-    "dev-bun": "bun build ./src/index.ts --outdir ./dist/esm --target bun --packages external --watch",
-    "build:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --esModuleInterop --target es2022 --moduleResolution bundler --module es2022 --outFile ./dist/ts/index.js",
-    "dev:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --esModuleInterop --target es2022 --moduleResolution bundler --module es2022 --outFile ./dist/ts/index.js --watch",
+    "build": "concurrently \"bun run build-cjs\" \"bun run build-esm\" \"bun run build:declaration\"",
+    "build-cjs": "bun build ./src/index.ts --outdir ./dist/cjs --target node --packages external --declaration --format cjs",
+    "build-esm": "bun build ./src/index.ts --outdir ./dist/esm --target node --packages external --declaration",
+    "build-esm:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --esModuleInterop --target es2022 --moduleResolution bundler --module es2022 --outFile ./dist/esm/index.js",
+    "build-cjs:declaration": "tsc ./src/index.ts --emitDeclarationOnly --declaration --esModuleInterop --target es2022 --moduleResolution bundler --module es2022 --outFile ./dist/cjs/index.js",
+    "build:declaration": "concurrently \"bun run build-esm:declaration\" \"bun run build-cjs:declaration\"",
+    "dev": "concurrently \"bun run dev-node\" \"bun run dev-bun\"",
+    "dev-cjs": "bun build ./src/index.ts --outdir ./dist/cjs --target node --packages external --format cjs --watch",
+    "dev-esm": "bun build ./src/index.ts --outdir ./dist/esm --target node --packages external --watch",
     "demo": "bun ./demo/index.ts"
   },
   "keywords": [
