--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
         "esModuleInterop": true,
         "target": "es2022",
         "module": "es2022",
-        "moduleResolution": "bundler",
+        "moduleResolution": "bundler"
     }
 }
